--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/bg_main"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         />
